<resources>
    <string name="app_name">数海信平台</string>
    <string name="company_tel">400-8788-165</string>
    <string name="company_name">数海信息技术有限公司</string>
    <string name="company_name_es">Copyright©2016-2018 Shuhai Information Technology \nCo.,Ltd. All rights reserved</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_send">发送</string>
    <string name="btn_search">搜索</string>
    <string name="btn_call">拨打</string>
    <string name="nav_home">首页</string>
    <string name="nav_location">位置</string>
    <string name="nav_message">消息</string>
    <string name="nav_mine">我的</string>
    <string name="username">用户名</string>
    <string name="hint_username">请输入手机号</string>
    <string name="userpwd">密码</string>
    <string name="hint_userpwd">请输入密码</string>
    <string name="hint_nickname">请输入用户昵称</string>
    <string name="forgetpwd"><u>忘记密码</u></string>
    <string name="register"><u>新用户注册</u></string>
    <string name="title_register">注册</string>
    <string name="login">登录</string>
    <string name="btn_register">注 册</string>
    <string name="login_failed">登录失败</string>
    <string name="error_empty_login">请输入用户名或密码</string>
    <string name="login_role">用户角色</string>
    <string name="role_visitor">游客</string>
    <string name="role_teacher">老师</string>
    <string name="role_parent">家长</string>
    <string name="title_skip">跳过</string>
    <string name="title_select_school">选择学校</string>
    <string name="label_county">省市区:</string>
    <string name="hint_county">选择省市区</string>
    <string name="label_school">学校:</string>
    <string name="label_school_name">学校名称:</string>
    <string name="hint_school_name">请输入学校名称</string>
    <string name="label_campus_name">校区名称:</string>
    <string name="hint_campus_name">请输入校区名称</string>
    <string name="label_campus">校区:</string>
    <string name="label_noschool"><u>学校不存在?点击进行学校申请</u></string>
    <string name="btn_binding">绑定该学校</string>
    <string name="btn_apply">申请学校</string>
    <string name="home_school">校园智脑</string>
    <string name="home_edu_online">教育培训</string>
    <string name="home_children_goods">快乐成长</string>
    <string name="home_invest">投资理财</string>
    <string name="home_living_payment">生活缴费</string>
    <string name="home_shopping">校园购</string>
    <string name="home_secret">安全设置</string>
    <string name="home_homework">家庭作业</string>
    <string name="home_notice">班级公告</string>
    <string name="home_question">在线提问</string>
    <string name="home_location">位置查询</string>
    <string name="home_score">成绩查询</string>
    <string name="home_course">课程表</string>
    <string name="home_comment">老师评语</string>
    <string name="home_honour">荣誉墙</string>
    <string name="home_moniter">语音监护</string>
    <string name="home_friend">碰碰交友</string>
    <string name="home_chat">微聊</string>
    <string name="home_walk">计步</string>
    <string name="home_clock">闹钟设置</string>
    <string name="home_shutdown">远程关机</string>
    <string name="home_checkin">考勤记录</string>
    <string name="home_leave">在线请假</string>
    <string name="home_alarm">警报查询</string>
    <string name="home_fence">电子围栏</string>
    <string name="home_news">教育头条</string>
    <string name="home_shop">校园购</string>
    <string name="home_bottom">我是有底线的</string>
    <string name="option_date">选择日期</string>
    <string name="option_sdate">开始日期</string>
    <string name="option_edate">结束日期</string>
    <string name="mine_unlogin">点击登录</string>
    <string name="mine_change_account">账号切换</string>
    <string name="mine_info">我的信息</string>
    <string name="mine_devices">设备管理</string>
    <string name="mine_class">我的班级</string>
    <string name="mine_invite">我的邀请</string>
    <string name="mine_student">我的学生</string>
    <string name="mine_course">我的课程</string>
    <string name="mine_fence">我的围栏</string>
    <string name="mine_wellet">我的钱包</string>
    <string name="mine_collect">我的收藏</string>
    <string name="dev_userinfo">设备使用者信息</string>
    <string name="dev_bind">设备绑定</string>
    <string name="msg_notify">通知</string>
    <string name="msg_interact">互动</string>
    <string name="msg_contacts">通讯录</string>
    <string name="msg_callboard">公告</string>
    <string name="msg_newproj">新品推荐</string>
    <string name="msg_fortune">致富财经</string>
    <string name="btn_sendmsg">发消息</string>
    <string name="label_call">打电话</string>
    <string name="label_chat">发消息</string>
    <string name="mine_bill">电子账单</string>
    <string name="mine_property">宝贝管理</string>
    <string name="mine_qr_code">二维码</string>
    <string name="mine_invite_qr_code">邀请二维码</string>
    <string name="mine_download_code">APP下载二维码</string>
    <string name="setting_qrcode_title">数海信息安防校园邀请码</string>
    <string name="setting_download_qrcode_title">扫码下载信平台App</string>
    <string name="setting_qrcode_des">高收益理财，易高效沟通\n多样化理财，建数海科技</string>
    <string name="mine_ms_ele_account">民生银行电子账户</string>
    <string name="mine_ms_payment">代收代缴</string>
    <string name="mine_ms_credit_card">信用卡业务</string>
    <string name="mine_about">关于</string>
    <string name="mine_setting">设置</string>
    <string name="mine_exit">退出当前账号</string>
    <string name="unbind_watch">解绑设备</string>
    <string name="title_detail">学生详情</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_add_tutelage">添加监护人</string>
    <string name="setting_help">使用帮助</string>
    <string name="label_old_pwd">旧密码</string>
    <string name="title_new_pwd">新密码设置</string>
    <string name="label_new_pwd1">新密码</string>
    <string name="label_new_pwd2">确认密码</string>
    <string name="push">发 布</string>
    <string name="homework_push">发布作业</string>
    <string name="push_again">重新发布</string>
    <string name="homework_detail">查看作业</string>
    <string name="label_ask_question">发布问题</string>
    <string name="label_class">班级：</string>
    <string name="label_subject">科目：</string>
    <string name="label_starttime">布置时间：</string>
    <string name="label_time">时间：</string>
    <string name="label_endtime">完成时间：</string>
    <string name="label_hint_endtime">点击选择完成时间</string>
    <string name="hint_homework_content">请输入作业内容</string>
    <string name="label_homework_title">作业名称：</string>
    <string name="label_homework_title_option">作业名称：%1$s</string>
    <string name="hint_notice_title">请输入公告标题</string>
    <string name="hint_notice_content">请输入公告内容</string>
    <string name="label_leave_starttime">请假时间：</string>
    <string name="label_leave_endtime">销假时间：</string>
    <string name="label_leave_content">请假事由：</string>
    <string name="label_leave_student">学生：</string>
    <string name="label_leave_type">请假类型：</string>
    <string name="label_leave_status">请假状态：</string>
    <string name="label_leave">请假</string>
    <string name="label_leave_modify">重新发送</string>
    <string name="label_modify">编辑</string>
    <string name="label_leave_ok">批准</string>
    <string name="label_leave_rebut">驳回</string>
    <string name="label_leave_del">删除</string>
    <string name="title_honor_push">发布荣誉</string>
    <string name="title_honor_detail">荣誉详情</string>
    <string name="label_honor_type">荣誉类型:</string>
    <string name="toast_honor_type_empty">请选择荣誉类型</string>
    <string name="label_comment_type">评语类型:</string>
    <string name="toast_comment_type_empty">请选择评语类型</string>
    <string name="hint_honor_content">请输入荣誉内容</string>
    <string name="hint_comment_content">请输入评语内容</string>
    <string name="hint_choose_student">请选择学生</string>
    <string name="label_teacher">教师：</string>
    <string name="label_teacher_option">教师：%1$s</string>
    <string name="label_tip">提示</string>
    <string name="message_tologin">该功能需登录后可用，确定登录？</string>
    <string name="message_nowatch">您还未绑定智能手表，请先绑定后才能使用其功能！</string>
    <string name="label_notice_title">标题：</string>
    <string name="label_content">内容：</string>
    <string name="label_content_option">内容：\n%1$s</string>
    <string name="label_camera">拍照</string>
    <string name="label_album">选择照片</string>
    <string name="label_back">返回</string>
    <string name="label_fence_list">学生围栏</string>
    <string name="label_cardset">学生卡设置</string>
    <string name="label_upgrade">新版更多惊喜，是否更新</string>
    <string name="label_card_sos">SOS设置</string>
    <string name="label_card_whitelist">白名单设置</string>
    <string name="label_card_moniter">监听设置</string>
    <string name="label_card_reset">当前输入为空，确定要重置号码？</string>
    <string name="label_card_moniter_reset">确定要重置监听号码？</string>
    <string name="label_card_sendsms">设置失败！您可用当前手机发送短信至学生卡进行设置。\r\n是否通过本手机发送设置指令？</string>
    <string name="toast_card_phone_empty">录入号码为空，请重新输入</string>
    <string name="homework_start_end_time">发布时间：%1$s\n完成时间：%2$s</string>
    <string name="toast_get_failed">获取失败</string>
    <string name="select_picture">选择相册</string>
    <string name="complete">完成</string>
    <string name="complete_percent">完成(%1$d/%2$d)</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="image_upline">最多选择%1$d张图片</string>
    <string name="image_loadfailed">相册加载失败</string>
    <string name="toast_camera_failed">相机打开失败</string>
    <string name="hint_question_content">请输入提问内容</string>
    <string name="hint_contract_name">联系人</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="input_error_phone">请输入正确手机号</string>
    <string name="label_fence_name">围栏名称</string>
    <string name="input_fence_name">请输入围栏名称</string>
    <string name="input_user_name">请输入用户昵称</string>
    <string name="hint_old_pwd">请输入旧密码</string>
    <string name="hint_new_pwd1">请输入新密码</string>
    <string name="hint_new_pwd2">请重新输入新密码</string>
    <string name="msg_delete_homework">确定要删除此家庭作业吗？</string>
    <string name="msg_delete_notice">确定要删除此活动公告吗？</string>
    <string name="msg_delete_leave">确定要删除此请假吗？</string>
    <string name="msg_miss_time">请选择一完整时间段</string>
    <string name="msg_large_endtime">结束时间小于开始时间，请重新选择</string>
    <string name="msg_month_cannot_overstep">只能查询当月日期的数据</string>
    <string name="msg_exit">确定要退出当前账号吗？</string>
    <string name="msg_unbind_watch">确定要解绑%1$s吗？</string>
    <string name="msg_fence_delete">确定要删除当前围栏信息吗？</string>
    <string name="msg_teacher_null">当前教师信息获取失败</string>
    <string name="msg_fence_deleteing">正在删除围栏信息</string>
    <string name="toast_class_empty">无执教班级</string>
    <string name="permission_location_denied">未授予获取位置信息权限</string>
    <string name="permission_location_rationale">请求授予定位权限</string>
    <string name="permission_location_never_askagain">已禁止该应用的定位权限，请去设置中进行设置</string>
    <string name="permission_storage_rationale">请求授予【读取文件】权限</string>
    <string name="permission_storage_denied">已禁止该应用的【读取文件】权限</string>
    <string name="permission_storage_never_askagain">已禁止该应用的【读取文件】权限，请去设置中进行设置</string>
    <string name="permission_call_rationale">请求授予拨打电话权限</string>
    <string name="permission_call_never_askagain">已禁止该应用的拨打电话权限，请去设置中进行设置</string>
    <string name="permission_contracts_denied">未授予查看通讯录权限</string>
    <string name="permission_contracts_never_askagain">已禁止该应用查看通讯录权限，请去设置中进行设置</string>
    <string name="permission_readphonestate_denied">未授予获取【读取手机信息】或【读写文件】或【录音】权限</string>
    <string name="permission_camera_denied">未授予【相机】权限</string>
    <string name="permission_camera_rationale">请求授予【相机】权限</string>
    <string name="permission_camera_never_askagain">已禁止该应用的【相机】权限，请去设置中进行设置</string>
    <string name="permission_voice_denied">未授予【录音】权限</string>
    <string name="permission_voice_rationale">请求授予【录音】权限</string>
    <string name="permission_voice_never_askagain">已禁止该应用的【录音】权限，请去设置中进行设置</string>
    <string name="voice_recorder_error">录音错误</string>
    <string name="permission_cameravoice_denied">未授予【相机】或【录音】权限</string>
    <string name="permission_cameravoice_rationale">请求授予【相机】或【录音】权限</string>
    <string name="label_next">下一步</string>
</resources>