<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/mineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/label_class" />

                <com.android.widget.spinner.MaterialSpinner
                    android:id="@+id/spnClasses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:ms_dropdown_height="wrap_content"
                    app:ms_dropdown_max_height="@dimen/dp_350"
                    app:ms_dropdown_width="wrap_content"
                    app:ms_padding_left="@dimen/dp_5"
                    app:ms_text_color="@color/text_black"
                    app:ms_text_size="@dimen/sp_int_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center">

                <TextView
                    style="@style/mineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_leave_student" />

                <TextView
                    android:id="@+id/txtStudent"
                    style="@style/mineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/hint_choose_student" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:visibility="gone">

                <TextView
                    style="@style/mineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_teacher" />

                <TextView
                    android:id="@+id/txtTeacher"
                    style="@style/mineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_black_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCreateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6">

                <TextView
                    style="@style/mineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comment_type" />

                <com.android.widget.spinner.MaterialSpinner
                    android:id="@+id/spnCommentType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:ms_dropdown_height="wrap_content"
                    app:ms_dropdown_max_height="@dimen/dp_350"
                    app:ms_dropdown_width="wrap_content"
                    app:ms_padding_left="@dimen/dp_5"
                    app:ms_text_color="@color/text_black"
                    app:ms_text_size="@dimen/sp_int_16" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6">

                <TextView
                    android:id="@+id/txtContent"
                    style="@style/mineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_content" />

                <EditText
                    android:id="@+id/edtContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_toRightOf="@+id/txtContent"
                    android:background="@null"
                    android:gravity="top|left"
                    android:hint="@string/hint_comment_content"
                    android:maxLength="500"
                    android:minLines="5"
                    android:paddingTop="@dimen/dp_10"
                    android:text=""
                    android:textColor="@color/text_black_2"
                    android:textColorHint="@color/text_grey"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/btn_bg_normal"
                android:padding="@dimen/dp_5"
                android:text="@string/push"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/btn_delete_bg"
                android:padding="@dimen/dp_5"
                android:text="@string/btn_delete"
                android:textSize="@dimen/sp_18"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/flTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_gray"
        android:visibility="gone" />
</FrameLayout>
