<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/hint_username"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_role"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center">

            <LinearLayout
                android:id="@+id/ll_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:clickable="true"
                android:gravity="left|center">

                <com.android.widget.view.SmoothCheckBox
                    android:id="@+id/cbx_visitor"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:color_checked="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/role_visitor"
                    android:textColor="@color/color_black_2"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:clickable="true"
                android:gravity="left|center">

                <com.android.widget.view.SmoothCheckBox
                    android:id="@+id/cbx_parent"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:color_checked="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/role_parent"
                    android:textColor="@color/color_black_2"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:clickable="true"
                android:gravity="left|center">

                <com.android.widget.view.SmoothCheckBox
                    android:id="@+id/cbx_teacher"
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:color_checked="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/role_teacher"
                    android:textColor="@color/color_black_2"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/btn_bg_normal"
        android:padding="@dimen/dp_5"
        android:text="@string/label_next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</LinearLayout>