<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_county" />

        <TextView
            android:id="@+id/txtcounty"
            style="@style/mineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:hint="@string/hint_county"
            android:textColor="@color/color_black_2"
            android:textColorHint="@color/color_black_3"
            android:lines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_school" />

        <com.android.widget.spinner.MaterialSpinner
            android:id="@+id/spnSchool"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_20"
            app:ms_dropdown_height="wrap_content"
            app:ms_dropdown_max_height="@dimen/dp_350"
            app:ms_dropdown_width="wrap_content"
            app:ms_padding_left="@dimen/dp_2"
            app:ms_text_color="@color/text_black"
            app:ms_text_size="@dimen/sp_int_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_campus" />

        <com.android.widget.spinner.MaterialSpinner
            android:id="@+id/spnCampus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_20"
            app:ms_dropdown_height="wrap_content"
            app:ms_dropdown_max_height="@dimen/dp_200"
            app:ms_dropdown_width="wrap_content"
            app:ms_padding_left="@dimen/dp_5"
            app:ms_text_color="@color/text_black"
            app:ms_text_size="@dimen/sp_int_16" />

    </LinearLayout>


</LinearLayout>
